# Octree

./: CMakeLists.txt  Octree.sln  README.md  configure  exe.sh  exe_single.sh  filter.sh  filter_reg_test.sh  gitpush.sh  source.pcd  target.pcd  test_aligned0.pcd  test_aligned1.pcd  test_aligned2.pcd  test_aligned3.pcd
Basic_process/: filter.cpp
Octree/: Comparision.cpp  Comparision_main.cpp  Octree.vcxproj  Octree.vcxproj.filters  SingleTest_main.cpp  fast_gicp.hpp  fast_gicp_impl.hpp  fast_svgicp.cpp  fast_svgicp.hpp  fast_svgicp_impl.hpp  fast_vgicp.cpp  fast_vgicp_impl.hpp  fast_vgicp_voxel.hpp  graph2d.cpp  graph2d.h  kitti_bin_to_pcd.cpp  lsq_registration.cpp  lsq_registration_impl.hpp  main.cpp  octreeTest.cpp  octreeTest_main.cpp  octree_level_voxel.h  octree_rec.cpp  octree_rec.hpp  octree_rec_impl.hpp  octree_recur_iter.h  plot.h
comb_filter/: filter_comp.cpp  filter_reg_test.cpp  filter_test.cpp  voxel_grid.cpp  voxel_grid.h  voxel_grid.hpp  voxel_grid_feature.cpp  voxel_grid_feature.h  voxel_grid_feature.hpp
data/: 0000000000.pcd  0000000001.pcd  0000000002.pcd  datasets.txt
data/2011_09_26_drive_0005_sync/octomaps/: 0000000000.bt  0000000005.bt  0000000010.bt
matlab/: score_time_fig_pic.asv  score_time_fig_pic.m
result/: result.txt
result/voxelFea/onReg/ori_fea_60000/: score.txt
